[gd_scene load_steps=4 format=3 uid="uid://fvt4bxdopiix"]

[ext_resource type="Script" path="res://scenes/UI/SkillBuilder/ComponentSelectors/multicomponent_selector/multi_component_selector.gd" id="1_eir0f"]
[ext_resource type="Script" path="res://scenes/UI/SkillBuilder/ComponentSelectors/multicomponent_selector/component_adder.gd" id="2_42o0q"]
[ext_resource type="Texture2D" uid="uid://7x3tgj5uads6" path="res://scenes/UI/SkillBuilder/ComponentSelectors/multicomponent_selector/check-mark.png" id="3_67trg"]

[node name="MulticomponentSelector" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -824.0
offset_bottom = -450.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eir0f")
action_chain_resource_type = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ComponentAdder" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
script = ExtResource("2_42o0q")

[node name="ComponentList" type="OptionButton" parent="VBoxContainer/ComponentAdder"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.75
text_overrun_behavior = 1

[node name="AddButton" type="TextureButton" parent="VBoxContainer/ComponentAdder"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
texture_normal = ExtResource("3_67trg")
ignore_texture_size = true
stretch_mode = 5

[node name="SelectedComponents" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/ComponentAdder/AddButton" to="." method="_on_add_button_pressed"]
